# RVComp

./: .gitignore  .gitmodules  Dockerfile  GNUmakefile  Makefile  README.md  config.mk  setting.py
bootrom/: .gitignore  Makefile  bootrom.v  rvcom.dts  rvcomp.dts
bootrom/src/: bootloader.c  bootrom.S  io.h  linker.ld  rvcom_uart.c  rvcom_uart.h  rvcomp_ether.c  rvcomp_ether.h  rvcomp_mmc.c  rvcomp_mmc.h  rvcomp_uart.c  rvcomp_uart.h
buildroot/: Config.in  external.desc  external.mk
buildroot/configs/: mmc_defconfig  mmc_rootfs_second_pass.fragment  uart_defconfig
buildroot/scripts/: post_image_script.sh
constr/: Arty-A7-35T-Master.xdc  Nexys-A7-100T-Master.xdc
fpga/Xilinx/: build.tcl  check_build.tcl  load.tcl  load_remote.tcl  rebuild.tcl  reclock.tcl
prog/coremark/: Makefile
prog/embench-iot/: Makefile
prog/riscv-tests/: Makefile
prog/rvtest/: .gitignore  Makefile  crt0.S  io.h  link.ld  main.c
src/: async_fifo.v  axi.vh  config.vh  rvcom.vh  synchronizer.v
src/cache/: l1_dcache.v  l1_icache.v  l2_cache.v
src/camera/: camera_controller.v  ov7670.v
src/clint/: clint.v
src/cpu/: alu.v  amo_decoder.v  amoalu.v  bimodal.v  bru.v  cpu.v  csr_regfile.v  csralu.v  decoder.v  divider.v  ifu.v  imm_gen.v  lsu.v  multiplier.v  regfile.v
src/dram/: async_fifo.v  dram_controller.v
src/ether/: ether_mii.v  ether_rmii.v  ether_rx_mii.v  ether_rx_rmii.v  ether_tx_mii.v  ether_tx_rmii.v  sdp_2_clock_ram.v
src/mmu/: dtlb.v  itlb.v  mmu.v  ptw.v
src/plic/: plic.v
src/sdcram/: cache_tags.v  cmd_rom.v  sdcram.v  sdcram_cmd_transceiver.v  sdcram_controller.v  sdcram_crc_16.v  sdcram_crc_7.v  sdcram_dat_transceiver.v  sdcram_interface.v  sdcram_protocol.v  tdp_rf_bw2clk.v
src/soc/: axi_interconnect.v  soc.v
src/sram/: sram.v
src/uart/: fifo.v  uart.v  uart_rx.v  (+1 more)
test/: BUFG.sv  IBUF.sv  clk_wiz_0.sv  clk_wiz_1.sv  clk_wiz_2.sv  clk_wiz_3.sv  mig_7series_0.sv  top.sv
tools/: README.md  pyproject.toml  setting.py  setup.sh  term.py  tests.py
tools/camera/: pyproject.toml  relay.py
tools/camera/rvcom_camera_relay.egg-info/: PKG-INFO
tools/camera/rvcomp_camera_relay.egg-info/: PKG-INFO
tools/camera/static/: index.html  licenses.html
(+41 files in other folders)
