[project]
name = "term"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
    "readchar>=4.2.1",
    "readkeys>=1.0.2",
    "tqdm>=4.67.1",
]

[project.scripts]
term = "term:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
