[project]
name = "rvcomp-tools"
version = "1.0.0"
description = "RVComp development tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
    "readchar>=4.2.1",
    "readkeys>=1.0.2",
    "tqdm>=4.67.1",
]

[project.scripts]
term = "term:main"
setting = "setting:main"
cliconfig = "setting:cli_main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
exclude-newer = "1 week"

[tool.hatch.version]
source = "vcs"
