[project]
name = "rvcomp-camera-relay"
version = "0.1.0"
description = "RVComp camera UDP -> WebSocket relay"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.0",
]

[project.scripts]
relay = "relay:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["relay"]

[tool.uv]
exclude-newer = "1 week"